force-app/main/default/objects/Reservation_Management__c/Reservation_Management__c.object-meta.xml
<CustomObject>
    <description>It is used to store Reservation Management details</description>
    <label>Reservation</label>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>