force-app/main/default/objects/Reservation_Management__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>It is used to relate Customer object</description>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipName>Reservation_Managements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>