force-app/main/default/objects/Reservation_Management__c/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <description>It is used to store Number of Guests</description>
    <label>Number of Guests</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>