force-app/main/default/objects/Reservation_Management__c/fields/Reservation_Time__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Time__c</fullName>
    <description>It is used to store Reservation Time</description>
    <label>Reservation Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>