force-app/main/default/objects/Reservation_Management__c/fields/Table_Management__c.field-meta.xml
<CustomField>
    <fullName>Table_Management__c</fullName>
    <description>It is used to relate Table</description>
    <label>Table Management</label>
    <referenceTo>Table__c</referenceTo>
    <relationshipName>Reservation_Managements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>