force-app/main/default/objects/Reservation_Management__c/listViews/Today_s_Reservation.listView-meta.xml
<ListView>
    <fullName>Today_s_Reservation</fullName>
    <columns>NAME</columns>
    <columns>Reservation_Date__c</columns>
    <columns>Reservation_Time__c</columns>
    <columns>Number_of_Guests__c</columns>
    <columns>Reservation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reservation_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Reservation</label>
</ListView>