force-app/main/default/objects/Reservation_Management__c/listViews/Upcoming_Reservation.listView-meta.xml
<ListView>
    <fullName>Upcoming_Reservation</fullName>
    <columns>NAME</columns>
    <columns>Reservation_Date__c</columns>
    <columns>Reservation_Time__c</columns>
    <columns>Number_of_Guests__c</columns>
    <columns>Reservation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reservation_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Reservation</label>
</ListView>